feature/build-db-save-admin: Build the database, user table and save admin information (new macbook) + router WIP

--- a/App/Admin/Resources/views/admin_login.phtml
+++ b/App/Admin/Resources/views/admin_login.phtml
@@ -1,1 +1,14 @@
-<h1>Admin du portfolio</h1>
+<section>
+    <h1>Admin login</h1>
+    <form action="/admin/login/check" method="post">
+        <div>
+            <label for="pseudo">Login</label>
+            <input id="pseudo" type="text"/>
+        </div>
+        <div>
+            <label for="password">Mot de passe</label>
+            <input id="password" type="password"/>
+        </div>
+        <button type="submit">Se connecter</button>
+    </form>
+</section>
