--- a/App/Front/Resources/Views/index.phtml
+++ b/App/Front/Resources/Views/index.phtml
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./public/main.css">
 </head>
 <body>
 <h1>Index Layout</h1>
 <a href="/admin">ADMIN</a>
+
+<script src="./public/bundle.js"></script>
+
 </body>
 </html>
