--- a/App/Admin/Resources/Views/installation_form.phtml
+++ b/App/Admin/Resources/Views/installation_form.phtml
@@ -7,8 +7,8 @@
 <body>
     <?php
     if (!empty($this->vars['options']['flash-message'])) { ?>
-        <div class="<?= $this->vars['type-class'] ?>">
-            <p><?= $this->vars['options']['flash-message'] ?></p>
+        <div class="<?= $this->vars['options']['flash-message']['type-class'] ?>">
+            <p><?= $this->vars['options']['flash-message']['message'] ?></p>
         </div>
     <?php } ?>
     <h1>Installation du projet</h1>
