--- a/App/Admin/Resources/Views/admin_home.phtml
+++ b/App/Admin/Resources/Views/admin_home.phtml
@@ -6,21 +6,79 @@
         <link rel="stylesheet" href="/public/main.css">
     </head>
     <body>
-        <header>
-            <?php
-            if (!empty($this->vars['options']['flash-message'])) { ?>
-                <div class="<?= $this->vars['options']['type-class'] ?>">
-                    <p><?= $this->vars['options']['flash-message']['message'] ?></p>
+        <header class="admin-header">
+        <?php
+        if (!empty($this->vars['options']['flash-message'])) { ?>
+            <div class="flash-message <?= $this->vars['options']['flash-message']['type-class'] ?>">
+                <p><?= $this->vars['options']['flash-message']['message'] ?></p>
+            </div>
+        <?php } ?>
+            <div class="header-content">
+                <div class="header-welcome">
+                    <h1>Admin Home</h1>
+                    <p>Bienvenue dans le Back Office !!</p>
                 </div>
-            <?php } ?>
-            <h1>Admin Home</h1>
-            <p>Bienvenue dans le Back Office !!</p>
-            <form action="/admin/logout" method="get">
-                <button type='submit'>DECONNEXION</button>
-            </form>
-        </header>
-        <main>
 
+                <form action="/admin/logout" method="get">
+                    <button type='submit'>DECONNEXION</button>
+                </form>
+            </div>
+        </header>
+        <main class="admin-wrapper flex">
+            <aside class="admin-sidebar">
+                <div>
+                    <h2>Menu</h2>
+                    <ul>
+                        <li>
+                            <a href="/admin/newProject">Ajouter un projet</a>
+                        </li>
+                        <li>
+                            <a href="/admin/newTechnoogy">Ajouter une techno</a>
+                        </li>
+                        <li>
+                            <a href="/admin/newLangage">Ajouter un Langage</a>
+                        </li>
+                        <li>
+                            <a href="/admin/newCertification">Ajouter une certification</a>
+                        </li>
+                        <li>
+                            <a href="/admin/newHobby">Ajouter un Hobby</a>
+                        </li>
+                        <li>
+                            <a href="/admin/newOpquastRule">Ajouter une règle Opquast</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>API</h2>
+                    <ul>
+                        <li>
+                            <a href="/admin/apiDoc">Documentation API</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </aside>
+            <section class="admin-content">
+                    <h2>Vue d'ensemble</h2>
+
+                    <div class="widget-admin">
+                        <h3>Listes des projets</h3>
+                    </div>
+                    <div class="widget-admin">
+                        <h3>Liste des technos</h3>
+                    </div>
+                    <div class="widget-admin">
+                        <h3>Liste des langages</h3>
+                    </div>
+                    <div class="widget-admin">
+                        <h3>Liste des certifications</h3>
+                    </div>
+                    <div class="widget-admin">
+                        <h3>Liste des règles Opquast</h3>
+                    </div>
+
+            </section>
         </main>
 </body>
 </html>
