--- a/App/Assets/scss/main.scss
+++ b/App/Assets/scss/main.scss
@@ -1,7 +1,46 @@
+/* COLORS */
 $midnight-blue : #2c3e5a;
 
+/* GENERAL */
+html {font-size: 62.5%}
+
 body {
+  margin: 0;
+  padding: 0;
+  font-size: 1.6rem;
+  line-height: 1.6;
+  font-family: 'Open Sans', sans-serif;
   background-color: $midnight-blue;
+
+}
+
+a, a:hover, a:visited, a:active {
+  text-decoration: none;
+}
+
+ul{
+  margin: 0;
+  padding:0;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+li{
+  list-style-type: none;
+}
+
+.flex{
+  display: flex;
+}
+
+.max-width{
+  max-width: 1100px;
+}
+
+img{
+  max-width: 100%;
 }
 
 h1{
@@ -9,9 +48,14 @@ h1{
 }
 a{
   color: orange;
-  transition: 1s ease;
+  transition: 0.3s ease;
   text-decoration: none;
     &:hover{
-      color: pink;
+      opacity: 0.5;
     }
   }
+
+
+@import "_normalizer";
+@import "_tools";
+@import "_adminHome";
