--- a/App/Front/Resources/Views/index.phtml
+++ b/App/Front/Resources/Views/index.phtml
@@ -8,7 +8,7 @@
     <body>
         <?php
         if (!empty($this->vars['options']['flash-message'])) { ?>
-            <div class="<?= $this->vars['options']['type-class'] ?>">
+            <div class="flash-message <?= $this->vars['options']['flash-message']['type-class'] ?>">
                 <p><?= $this->vars['options']['flash-message']['message'] ?></p>
             </div>
         <?php } ?>
