add-technology-content: Modification in router, add  possibility to handle params in Get Request. Add first CRUD for color Content. Some details still in pending, because of another idea: made a formbuilder and this first CRUD will envolve and become more dynamic.

--- a/App/Admin/Resources/Views/installation_form.phtml
+++ b/App/Admin/Resources/Views/installation_form.phtml
@@ -14,7 +14,7 @@ if (!empty($this->vars['options']['flash-message'])) { ?>
     </div>
 <?php } ?>
 <h1>Installation du projet</h1>
-<form action="/install/startInstall" method="post">
+<form action="/admin/install/startInstall" method="post">
     <h2 style="color:#900;">Installation du projet</h2>
     <fieldset>
         <legend>
