--- a/App/web/public/main.css
+++ b/App/web/public/main.css
@@ -399,3 +399,53 @@ template {
     margin: 1rem 2%;
     padding: 1rem 1%; }
 
+.admin-form {
+  display: inline-block;
+  margin-bottom: 2rem;
+  vertical-align: top;
+  width: 60%;
+  padding: 1rem 2%; }
+  .admin-form .input-text {
+    margin: 1rem 1%; }
+    .admin-form .input-text label {
+      width: 30%;
+      display: inline-block; }
+    .admin-form .input-text input {
+      width: 70%;
+      display: inline-block; }
+  .admin-form .form-btn-submit {
+    display: block;
+    margin: 3rem 1% 0 auto;
+    padding: 1rem 2%;
+    background-color: orange;
+    color: white;
+    min-width: 150px;
+    border: solid 2px orange;
+    transition: 0.4s ease;
+    border-radius: 5px; }
+    .admin-form .form-btn-submit:hover {
+      background-color: white;
+      color: orange; }
+
+.admin-content-widget {
+  display: inline-block;
+  width: 40%; }
+  .admin-content-widget table {
+    width: 100%;
+    border-collapse: collapse; }
+    .admin-content-widget table thead td {
+      width: 30%; }
+    .admin-content-widget table tbody tr:nth-child(even) {
+      background-color: burlywood; }
+    .admin-content-widget table tbody tr:nth-child(odd) {
+      background-color: bisque; }
+    .admin-content-widget table tbody tr:hover {
+      opacity: 0.4; }
+    .admin-content-widget table tbody tr td {
+      padding: 0.5rem 2%; }
+      .admin-content-widget table tbody tr td a {
+        display: block;
+        color: #2c3e5a;
+        width: 100%;
+        cursor: pointer; }
+
