first step : add minimal fields dynamically, display name and technical name

--- a/App/Admin/Resources/Views/admin_home.phtml
+++ b/App/Admin/Resources/Views/admin_home.phtml
@@ -21,6 +21,7 @@
 
                 <div class="adminLogout">
                     <a href="/admin/login/logout" title="logout">DECONNEXION</a>
+                    <a href="/" title="logout">Aller au sur le Front</a>
                 </div>
             </div>
         </header>
@@ -28,7 +29,7 @@
             <aside class="admin-sidebar">
                 <div>
                     <h2>Menu</h2>
-                    <a href="/addContentElement">Ajouter un nouveau types de contenu</a>
+                    <a href="/admin/formbuilder/index">Ajouter un nouveau types de contenu</a>
                     <ul>
                         <li>
                             <a href="/admin/newProject">Ajouter un projet</a>
@@ -84,5 +85,7 @@
 
             </section>
         </main>
-</body>
+        <script src="../../../public/bundle.js"></script>
+
+    </body>
 </html>
