--- a/App/Admin/Resources/Views/formbuilder.phtml
+++ b/App/Admin/Resources/Views/formbuilder.phtml
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/public/main.css">
+    <link rel="icon" href="/public/favicon/favicon.ico">
+
 </head>
 <body>
 <header class="admin-header">
     <?php
     if (!empty($this->vars['options']['flash-message'])) { ?>
         <div class="flash-message <?= $this->vars['options']['flash-message']['type-class'] ?>">
-            <p><?= $this->vars['options']['flash-message']['message'] ?></p>
+            <?php
+            foreach ($this->vars['options']['flash-message'] as $key){ ?>
+                <p class="flash-message <?= $key['type-class'] ?>"><?= $key['message'] ?></p>
+            <?php }
+            ?>
         </div>
     <?php } ?>
     <div class="header-content">
@@ -31,27 +37,14 @@
             <h2>Menu</h2>
             <a href="/admin/formBuilder/index">Ajouter un nouveau types de contenu</a>
             <ul>
-                <li>
-                    <a href="/admin/newProject">Ajouter un projet</a>
-                </li>
-                <li>
-                    <a href="/admin/newTechnology">Ajouter une techno</a>
-                </li>
-                <li>
-                    <a href="/admin/newLangage">Ajouter un Langage</a>
-                </li>
-                <li>
-                    <a href="/admin/newCertification">Ajouter une certification</a>
-                </li>
-                <li>
-                    <a href="/admin/newHobby">Ajouter un Hobby</a>
-                </li>
-                <li>
-                    <a href="/admin/newOpquastRule">Ajouter une règle Opquast</a>
-                </li>
-                <li>
-                    <a href="/admin/handleColors">Gérer les couleurs des étiquettes</a>
-                </li>
+                <?php
+                foreach ($this->vars['options']['navigation'] as $key => $value){?>
+                    <li>
+                        <a href="/admin/content/index?name=<?= $value['contentTechnicalName'] ?>">
+                            <?= ucfirst($value['contentDisplayName']) ?>
+                        </a>
+                    </li>
+                <?php } ?>
             </ul>
         </div>
         <div>
@@ -69,11 +62,9 @@
             <h2>FormBuilder</h2>
             <p>Bienvenue sur le formbuilder, ici on peut créer les formulaires dont on a besoin pour la création du contenu.</p>
 
-            <p>Choisissez le premier champs à créer</p>
         </article>
-
         <article>
-            <form class="formbuilder <?= $this->vars['options']['form-selector'] ?? '' ?>" action="">
+            <form class="formbuilder  <?= $this->vars['options']['form-selector'] ?? '' ?>" action="/admin/formBuilder/validator" method="post">
 
             </form>
         </article>
@@ -81,6 +72,7 @@
 
     </section>
 </main>
+
 <script src="../../../public/bundle.js"></script>
 
 </body>
