--- a/App/Admin/Resources/Views/formbuilder.phtml
+++ b/App/Admin/Resources/Views/formbuilder.phtml
@@ -1,67 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="/public/main.css">
-    <link rel="icon" href="/public/favicon/favicon.ico">
+<?php include("block__admin_head.phtml"); ?>
 
-</head>
 <body>
-<header class="admin-header">
-    <?php
-    if (!empty($this->vars['options']['flash-message'])) { ?>
-        <div class="flash-message <?= $this->vars['options']['flash-message']['type-class'] ?>">
-            <?php
-            foreach ($this->vars['options']['flash-message'] as $key){ ?>
-                <p class="flash-message <?= $key['type-class'] ?>"><?= $key['message'] ?></p>
-            <?php }
-            ?>
-        </div>
-    <?php } ?>
-    <div class="header-content">
-        <div class="header-welcome">
-            <h1>FORM BUILDER</h1>
-            <p>Création de formulaires</p>
-        </div>
+<?php include("block__admin_header.phtml"); ?>
 
-        <div class="adminLogout">
-            <a href="/admin/login/logout" title="logout">DECONNEXION</a>
-            <a href="/" title="logout">Aller au sur le Front</a>
-        </div>
-    </div>
-</header>
 <main class="admin-wrapper flex">
-    <aside class="admin-sidebar">
-        <div>
-            <h2>Menu</h2>
-            <a href="/admin/formBuilder/index">Ajouter un nouveau types de contenu</a>
-            <ul>
-                <?php
-                foreach ($this->vars['options']['navigation'] as $key => $value){?>
-                    <li>
-                        <a href="/admin/content/index?name=<?= $value['contentTechnicalName'] ?>">
-                            <?= ucfirst($value['contentDisplayName']) ?>
-                        </a>
-                    </li>
-                <?php } ?>
-            </ul>
-        </div>
-        <div>
-            <h2>API</h2>
-            <ul>
-                <li>
-                    <a href="/admin/apiDoc">Documentation API</a>
-                </li>
-            </ul>
-        </div>
+    <?php include("block__admin_menu.phtml"); ?>
 
-    </aside>
     <section class="admin-content">
         <article class="welcome-formbuilder">
             <h2>FormBuilder</h2>
             <p>Bienvenue sur le formbuilder, ici on peut créer les formulaires dont on a besoin pour la création du contenu.</p>
-
+<!-- <h1>{{ options.form-selector }}</h1> -->
         </article>
         <article>
             <form class="formbuilder  <?= $this->vars['options']['form-selector'] ?? '' ?>" action="/admin/formBuilder/validator" method="post">
