--- a/App/web/public/main.css
+++ b/App/web/public/main.css
@@ -25,6 +25,7 @@ li {
   list-style-type: none; }
 
 .flex {
+  display: -webkit-box;
   display: flex; }
 
 .max-width {
@@ -38,6 +39,7 @@ h1 {
 
 a {
   color: orange;
+  -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
   text-decoration: none; }
   a:hover {
