--- a/App/Front/Resources/Views/index.phtml
+++ b/App/Front/Resources/Views/index.phtml
@@ -14,7 +14,8 @@
         <?php } ?>
         <h1>Index Layout</h1>
         <a href="/admin">ADMIN</a>
-
+        <img src="./uploads/img/bbang.jpeg" alt="">
+        <img src="http://www.portfolio.localhost/uploads/img/bbang.jpeg" alt="">
         <script src="./public/bundle.js"></script>
 
     </body>
