delete-content-type: create warning zone, delete content type from this section

--- a/App/Admin/Resources/Views/block__admin_header.phtml
+++ b/App/Admin/Resources/Views/block__admin_header.phtml
@@ -11,12 +11,13 @@
     <?php } ?>
     <div class="header-content">
         <div class="header-welcome">
-            <h1>FORM BUILDER</h1>
-            <p>Création de formulaires</p>
+            <h1>- Portfolio 3WAcademy -</h1>
+            <p>Administration</p>
         </div>
 
         <div class="adminLogout">
-            <a href="/admin/login/logout" title="logout">DECONNEXION</a>
+            <a href="/admin/admin/home" title="admin_home">Admin home</a>
+            <a href="/admin/login/logout" title="logout">Deconnexion</a>
             <a href="/" title="logout">Aller au sur le Front</a>
         </div>
     </div>
