--- a/App/Admin/Resources/Views/block__admin_menu.phtml
+++ b/App/Admin/Resources/Views/block__admin_menu.phtml
@@ -21,5 +21,15 @@
             </li>
         </ul>
     </div>
-
+    <div>
+        <h2>Réglages</h2>
+        <ul>
+            <li>
+                <a href="/admin/settings/mainSettings">Réglages du site</a>
+            </li>
+            <li>
+                <a href="/admin/settings/dangerZone">Danger Zone</a>
+            </li>
+        </ul>
+    </div>
 </aside>
