delete-content-from-taxo-conf: clean taxonomy configuration files, when a taxonomy is deleted from Wraning zone

--- a/App/Admin/Resources/Views/admin_login.phtml
+++ b/App/Admin/Resources/Views/admin_login.phtml
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <title>Portfolio</title>
-        <link rel="stylesheet" href="/public/main.css">
-    </head>
+    <?php include("block__admin_head.phtml"); ?>
+
     <body>
     <?php
     if (!empty($this->vars['options']['flash-message'])) { ?>
