--- a/App/Admin/Resources/Views/block__admin_head.phtml
+++ b/App/Admin/Resources/Views/block__admin_head.phtml
@@ -2,4 +2,5 @@
     <meta charset="UTF-8">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/public/main.css">
+    <link rel="icon" href="/public/favicon/favicon.ico">
 </head>
