--- a/App/Admin/Resources/Views/admin_home.phtml
+++ b/App/Admin/Resources/Views/admin_home.phtml
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <title>Portfolio</title>
-        <link rel="stylesheet" href="/public/main.css">
-        <link rel="icon" href="/public/favicon/favicon.ico">
+    <?php include("block__admin_head.phtml"); ?>
 
-    </head>
     <body>
         <?php include("block__admin_header.phtml"); ?>
 
